@@ -6,7 +6,7 @@ DIST webcolors-1.4.tar.gz 7843 RMD160 c6c976a70917f63e1df6fd90734cc356f5f845a7 S
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9JG2YACgkQzJrj3cAXR0nClQCeOBFqgjwvxoy7pRF/mDAj4GkL
-fzsAoJHRdhA9CcO71PUjJMm1mB7SCOkR
-=sW/h
+iEYEAREKAAYFAk9SRAoACgkQzJrj3cAXR0ltwgCdF6Wi3xxLosPaEHoJ6VHrKsVx
+UtQAoK1WXk/iGvH1snxOr60Icq4bRN+d
+=ecev
 -----END PGP SIGNATURE-----
