@@ -1,12 +1,10 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=3
 SUPPORT_PYTHON_ABIS="1"
 PYTHON_DEPEND="*"
-# 3.x is restricted due to use of print syntax
-#RESTRICT_PYTHON_ABIS="3.*"
 
 inherit jnrowe-pypi
 
