@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> webcolors-1.3.1.ebuild,
+  webcolors-1.4.ebuild:
+  Removed Python 2.4 support.
+
 *webcolors-1.4 (25 Feb 2012)
 
   25 Feb 2012; James Rowe <jnrowe@gmail.com> +webcolors-1.4.ebuild,
